# moku

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  sonar-project.properties
.github/workflows/: deploy.yml  dev.yml
backend/: Cargo.toml  database.db
backend/src/: data_spot.rs  graphql.rs  main.rs
backend/src/data_spot/: data_types.rs  db.rs
backend/src/data_spot/db/: handler.rs  ingredients.rs  recipe_ingredients.rs  recipe_steps.rs  recipe_tags.rs  recipes.rs  tables.rs  tags.rs
backend/src/data_spot/db/tables/: ingredients.rs  recipe_ingredients.rs  recipe_steps.rs  recipe_tags.rs  recipes.rs  tags.rs  users.rs
res/: init.sql  populate.sql  recipes_50.sql
src/: auth.rs  data_spot.rs  data_types.rs  db.rs  graphql.rs  main.rs
src/data_spot/db/tables/: recipe_ingredients.rs  recipe_steps.rs  recipe_tags.rs  tags.rs
src/db/: tables.rs
src/db/tables/: ingredients.rs  recipe_ingredients.rs  recipe_steps.rs  recipes.rs  users.rs
src/graphql/: mutation.rs
