[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.15"
async-graphql-axum = "7.0.16"
axum = "0.8.3"
chrono = "0.4.40"
dotenv = "0.15.0"
native-tls = "0.2.14"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
